<resources>
    <string name="app_name">CapstonProject</string>
    <string name="action_delete_all">Delete All</string>

    <!-- Labels -->
    <string name="navigation_home">Income Overview</string>
    <string name="navigation_add_income">Add income</string>

    <!-- Add Income Fragment -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="date">Day / Month / Year</string>
    <string name="empty_field">Make sure non of the fields is empty!</string>
    <string name="invalid_date">Please enter a valid date!</string>

    <!-- Income Overview -->
    <string name="income_amount">Amount: €</string>
    <string name="income_date">Date:</string>
    <string name="income_add_button">Add income</string>

    <!-- bottom navigation -->
    <string name="income_nav">Incomes</string>
    <string name="expense_nav">Expenses</string>
    <string name="home_nav">Home</string>

    <!-- Home -->
    <string name="balance">Balance </string>
    <string name="none">None </string>
    <string name="defaultValue">0</string>
    <string name="format">%.2f</string>
    <string name="savings">Savings</string>

</resources>